@@ -13,6 +13,8 @@ rm -rf $OUT.7z
 
 mkdir -p $OUT
 
+mkdir -p $OUT/tools
+
 cp    $IN/hashcat.exe                   $OUT/
 cp    $IN/hashcat.bin                   $OUT/
 cp    $IN/hashcat.hctune                $OUT/
@@ -29,6 +31,7 @@ cp    $IN/example.dict                  $OUT/
 cp    $IN/example[0123456789]*.hash     $OUT/
 cp    $IN/example[0123456789]*.cmd      $OUT/
 cp -r $IN/OpenCL                        $OUT/
+cp    $IN/tools/*hashcat.p[ly]          $OUT/tools/
 
 # since for the binary distribution we still use .bin, we need to rewrite the commands
 # within the example*.sh files
@@ -46,6 +49,7 @@ dos2unix $OUT/rules/hybrid/*.rule
 dos2unix $OUT/docs/*
 dos2unix $OUT/docs/license_libs/*
 dos2unix $OUT/example*
+dos2unix $OUT/tools/*
 
 unix2dos $OUT/layouts/*.hckmap
 unix2dos $OUT/masks/*.hcmask
@@ -56,6 +60,7 @@ unix2dos $OUT/docs/license_libs/*
 unix2dos $OUT/example*.cmd
 unix2dos $OUT/OpenCL/*
 unix2dos $OUT/hashcat.hctune
+unix2dos $OUT/tools/*
 
 chmod 755 $OUT
 chmod 755 $OUT/rules
@@ -82,5 +87,6 @@ chmod 644 $OUT/*.exe
 chmod 755 $OUT/*.bin
 chmod 644 $OUT/hashcat.hctune
 chmod 644 $OUT/hashcat.hcstat2
+chmod 755 $OUT/tools/*hashcat.p[ly]
 
 time 7z a -t7z -m0=lzma2:d31 -mx=9 -mmt=8 -ms=on $OUT.7z $OUT
